Update system Attack and Type with add Class TypePokemon