@@ -1,13 +1,16 @@
 plugins {
     id 'application'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'org.sonarqube' version '4.3.1.3277'
+    id 'jacoco'
+
 }
 
 group = 'partiel_java'
 version = '1.0.0'
 
 //version Java
-sourceCompatibility = '11'
+sourceCompatibility = '21'
 
 mainClassName = 'Main';
 
@@ -19,6 +22,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.mockito:mockito-core:5.2.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
 }
 
 run {
@@ -30,5 +37,28 @@ jar {
         attributes(
                 'Maine-Class': mainClassName
         )
+    }
+}
+
+test {
+    jvmArgs "-XX:+EnableDynamicAgentLoading", "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+    useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "mon-projet"
+        property "sonar.projectName", "Mon Projet"
+        property "sonar.host.url", "http://localhost:9000"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
     }
 }
